# dotfiles

./: .gitignore  README.md
RuDI/: Cargo.toml
RuDI/src/: main.rs  packages.rs  shell.rs
fish/.config/fish/: config.fish
fish/.config/fish/conf.d/: fnm.fish
ghostty/.config/ghostty/: config
hypr/.config/hypr/: hyprland.conf  hyprland.lua  hyprlock.conf  local.lua.example
installer/src/: main.rs  packages.rs  shell.rs  stow.rs  ui.rs
nvim/.config/nvim/: init.lua  lazy-lock.json
nvim/.config/nvim/lua/config/: lazy.lua
nvim/.config/nvim/lua/config/plugins/: blink.lua  lsp.lua  mini.lua  null-ls.lua  oil.lua  telescope.lua  treesitter.lua
nvim/.config/nvim/lua/config/plugins/telescope/: multigrep.lua
rofi/.config/rofi/: config.rasi
waybar/.config/waybar/: config  style.css
zsh/: .zshrc
