[package]
name = "rudi"
version = "0.1.0"
edition = "2024"
authors = ["dotJBerg"]
description = "RuDI — Rust Dotfiles Installer for Arch Linux + Hyprland"
repository = "https://github.com/dotJBerg/dotfiles"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "3"
indicatif = "0.17"
which = "7"
anyhow = "1"
